groups/flowDefinitions/objects/TW1_Item__c.object
<CustomObject>
    <fields>
        <fullName>TW1_Emprestimo_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Empréstimo</label>
        <referenceTo>TW1_Emprestimo__c</referenceTo>
        <relationshipLabel>Itens</relationshipLabel>
        <relationshipName>Itens_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_ID_Externo__c</fullName>
        <externalId>true</externalId>
        <label>ID Externo</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Observacao__c</fullName>
        <label>Observação</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TW1_Patrimonio__c</fullName>
        <label>Patrimônio</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Shopping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shopping</label>
        <referenceTo>TW1_Shopping__c</referenceTo>
        <relationshipLabel>Itens</relationshipLabel>
        <relationshipName>Itens</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Vago</fullName>
                    <default>true</default>
                    <label>Vago</label>
                </value>
                <value>
                    <fullName>Locado</fullName>
                </value>
                <value>
                    <fullName>Reservado</fullName>
                </value>
                <value>
                    <fullName>Inativo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Tipo__c</fullName>
        <label>Tipo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cadeira de Rodas</fullName>
                </value>
                <value>
                    <fullName>Cadeira de rodas Motorizada</fullName>
                </value>
                <value>
                    <fullName>Carregador Portátil</fullName>
                </value>
                <value>
                    <fullName>Carrinho de Bebê</fullName>
                </value>
                <value>
                    <fullName>PetCar</fullName>
                </value>
                <value>
                    <fullName>Armário</fullName>
                </value>
                <value>
                    <fullName>Sala</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Item</label>
    <listViews>
        <fullName>Itens</fullName>
        <columns>NAME</columns>
        <columns>TW1_Tipo__c</columns>
        <columns>TW1_Status__c</columns>
        <columns>TW1_Shopping__c</columns>
        <columns>TW1_Emprestimo_del__c</columns>
        <columns>TW1_Observacao__c</columns>
        <columns>TW1_Patrimonio__c</columns>
        <filterScope>Everything</filterScope>
        <label>Itens</label>
    </listViews>
    <nameField>
        <label>Nome do Item</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Itens</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>